--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "^2.0.1",
+    "angular2-uuid": "^1.1.1",
     "cordova-sqlite-storage": "^2.0.4",
     "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
